fixed that weird whitespace nav issue

--- a/styles.css
+++ b/styles.css
@@ -438,7 +438,6 @@
     nav {
         text-align: right;
         height: 20px;
-        margin: 10px;
     }
     
     nav li {
